# ml-practice

./: pyproject.toml
models/linear_models/: __init__.py  linear_regression.py  logistic_regression.py  ridge_linear_regression.py
week1/: 3. logistic-imbalance.ipynb  4. classification.ipynb  5. tree-and-esemble.ipynb  6. mlp.ipynb  __init__.py  download-data.py  linear-regression.ipynb  logistic-imbalance.ipynb  logistic-regression.ipynb
week2/: 1. tokenizer.ipynb  layer_norm.ipynb  mha.ipynb
